--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,8 +42,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.sqlite.classpath}:\
-    ${libs.commons.uploadfile.classpath}
+    ${libs.commons.uploadfile.classpath}:\
+    ${libs.sqllits.classpath}:\
+    ${libs.sqlite.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
